add vescel link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section>
         <div class="container">
-            <h1>Hi!</h1>
+            <h1>Hi! How are you doing?</h1>
             <div class="card p-3">
                 <h2 class="mt-0">RSS агрегатор</h2>
                 <form >
