added feedback messages

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <section>
       <div class="container">
-        <h1>Hi! How are you doing?</h1>
+        <h1>Начните читать RSS сегодня! Это легко, это красиво.</h1>
         <div class="card p-3">
           <h2 class="mt-0">RSS агрегатор</h2>
           <form class="form">
             <div class="input-group mt-3">
               <input type="text" id="rss-input" name="rss" class="form-control" placeholder="RSS name" aria-describedby="button" />
-              <button class="btn btn-primary" type="submit" id="button">Button</button>
+              <button class="btn btn-primary" type="submit" id="button">Добавить</button>
             </div>
           </form>
           <p>Пример: https://ru.hexlet.io/lessons.rss</p>
