--- a/index.html
+++ b/index.html
@@ -6,45 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <section class="container-fluid bg-dark p-5">
-      <div class="row">
-        <div class="card-main col-md-10 col-lg-8 mx-auto text-white">
-          <h1 class="display-3 mb-0">RSS агрегатор</h1>
-          <p>Начните читать RSS сегодня! Это легко, это красиво.</p>
-            <form class="rss-form text-body">
-              <div class="row">
-                <div class="input-group mt-3">
-                  <div class="col">
-                    <div class="form-floating">
-                      <input id="url-input" type="text" name="url" class="rss-input form-control w-100" placeholder="Ссылка RSS" aria-describedby="button"/>
-                      <label for="url-input">Ссылка RSS</label>
-                    </div>
-                  </div>
-                  <div class="col-auto">
-                    <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5" id="button">Добавить</button>
-                  </div>
-                </div>
-              </div>
-            </form>
-            <p>Пример: https://ru.hexlet.io/lessons.rss</p>
-        </div>
-      </div>
-    </section>
-    <section class="container-fluid container-xxl p-5">
-      <div class="row">
-        <div class="col-md-10 col-lg-8 order-1 mx-auto posts">
-          <div class="card border-0 div-posts">
-            <div class="card-body title-posts"></div>
+  <body class="d-flex flex-column min-vh-100" data-new-gr-c-s-check-loaded='14.1047.0'>
+    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modal" style="display: none" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content flex">
+          <div class="modal-header flex">
+            <h5 class="modal-title" id="exampleModalLabel"></h5>
+            <button type="button" class="btn-close btn-closeInfo" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body"></div>
+          <div class="modal-footer flex">
+            <a class="btn btn-primary full-article" role="button" target="_blank" rel="noopener noreferrer">Читать полностью</a>
+            <button type="button" class="btn btn-secondary btn-closeInfo" data-bs-dismiss="modal">Закрыть</button>
           </div>
         </div>
-        <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds">
-          <div class="card border-0 div-feeds">
-            <div class="card-body title-feeds">
+      </div>
+    </div>
+    <main class="flex-grow-1">
+      <section class="container-fluid bg-dark p-5">
+        <div class="row">
+          <div class="card-main col-md-10 col-lg-8 mx-auto text-white">
+            <h1 class="display-3 mb-0">RSS агрегатор</h1>
+            <p>Начните читать RSS сегодня! Это легко, это красиво.</p>
+              <form class="rss-form text-body">
+                <div class="row">
+                  <div class="input-group mt-3">
+                    <div class="col">
+                      <div class="form-floating">
+                        <input id="url-input" type="text" name="url" class="rss-input form-control w-100" placeholder="Ссылка RSS" aria-describedby="button"/>
+                        <label for="url-input">Ссылка RSS</label>
+                      </div>
+                    </div>
+                    <div class="col-auto">
+                      <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5" id="button">Добавить</button>
+                    </div>
+                  </div>
+                </div>
+              </form>
+              <p>Пример: https://ru.hexlet.io/lessons.rss</p>
+          </div>
+        </div>
+      </section>
+      <section class="container-fluid container-xxl p-5">
+        <div class="row">
+          <div class="col-md-10 col-lg-8 order-1 mx-auto posts">
+            <div class="card border-0 div-posts">
+              <div class="card-body title-posts"></div>
+            </div>
+          </div>
+          <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds">
+            <div class="card border-0 div-feeds">
+              <div class="card-body title-feeds">
+              </div>
             </div>
           </div>
         </div>
+      </section>
+    </main>
+    <footer class="footer border-top py-3 mt-5">
+      <div class="container-xl">
+          <div class="text-center"><a href="#" target="_blank"></a></div>
       </div>
-    </section>
+  </footer>
   </body>
 </html>
