fixed input focus

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <div class="input-group mt-3">
                     <div class="col">
                       <div class="form-floating">
-                        <input id="url-input" type="text" name="url" class="rss-input form-control w-100" placeholder="Ссылка RSS" aria-describedby="button"/>
+                        <input id="url-input" type="text" name="url" class="rss-input form-control w-100" placeholder="Ссылка RSS" aria-label="url" autocomplete="off" aria-describedby="button"/>
                         <label for="url-input">Ссылка RSS</label>
                       </div>
                     </div>
