fixed modal styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body class="d-flex flex-column min-vh-100" data-new-gr-c-s-check-loaded='14.1047.0'>
-    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modal" style="display: none" aria-hidden="true">
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content flex">
           <div class="modal-header flex">
